--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -1,3 +1,90 @@
+#################### Lines from Units ####################
+
+Dilophosaurus = Dilofosaurio
+
+Raptor Rider = Jinete de Raptor
+
+Raptor = Raptor Salvaje
+
+Corrupted Survivor = Superiviviente Corrupto
+
+Survivor = Superviviente
+
+Crossbow Survivor = Superviviente con Ballesta
+
+Kapro Rider = Jinete de Kapro
+
+Ptera Rider = Jinete de Pteranodon
+ 
+Carno Rider = Jinete de Carno
+
+Sarco Rider = Jinete de Sarco
+
+Stego Rider = Jinete de Stego
+
+Theri Rider = Jinete de Theri
+
+Camuflage Survivor = Jinete Camuflado
+
+Flak Survivor = Superviviente con Armadura
+
+Allo Rider = Jinete de Alosaurio
+
+Purlovia Rider = Jinete de Purlovia
+
+Megalodon Rider = Jinete de Megalodon
+
+Basilo Rider = Jinete de Basilosaurio
+
+Plesio Rider = Jinete de Plesio
+
+Dunkleosteous Rider = Jinete de Dunkleosteous
+
+Mosa Rider = Jinete de Mosasaurio
+
+MiniCannon = Pequeño Cañon
+
+Rhino Rider = Jinete de Rinoceronte Lanudo
+
+Daeodon Rider = Jinete de Daeodon
+
+Rex Rider = Jinete de Rex
+
+Velonasaur Rider = Jinete de Velona
+
+Spino Rider = Jinete de Spino
+
+Giga Rider = Jinete de Giga
+
+Managarmr Rider = Jinete de Managarmr
+
+Tropeo Rider = Jinete de Tropeognathus
+
+Flamethrower Survivor = Superviviente con Lanzallamas
+
+City Destroyer = Destructor de Ciudades
+
+Sniper = Francotirador
+
+Shotgun Survivor = Escopetero
+
+Nameless = Sin Nombre
+
+Tek Rex Rider = Jinete de Rex Tek
+
+Reaper = Rey Asolador
+
+New Artillery = Nueva Artilleria
+
+Ultimate Destructor = Destructor Ultimo
+
+Bazooka = Bazuka
+
+Tek HomoDeus = Tek HomoDios
+
+Ascended HomoDeus = HomoDios Ascendido
+
+Ascended Gunner = Armero Ascendido
 
 #################### Lines from TileResources ####################
 
@@ -24,6 +111,14 @@ Roll Rat = Rotorrata
 Fungic Wood = Madera Fungica
 
 Basilisk = Basilisco
+
+Amargasaur = Amargasaurio
+
+Magmasaur = Magmasaurio
+
+Astrodelphis = Astrodelphis
+
+Carcharodontosaurus = Carcharodontosaurio
 
 Fiber = Fibra
 
@@ -251,8 +346,63 @@ Defending Honor Studies = Estudios de la Defensa del Honor
 
 Assault Teaching = Enseñanza sobre Asalto
 
+#################### Lines from Wonders from Ark s UNCIV Evolved ####################
 
+Blue Obelisk = Obelisco Azul
 
+Green Obelisk = Obelisco Verde
+
+Red Obelisk = Obelisco Rojo
+
+Santiago Grave = Tumba de Santiago
+
+Aberrant Invasion = Invasion Aberrante
+ 
+#################### Lines from Nations from Ark s UNCIV Evolved ####################
+
+Edmundium Empire = Imperio del Elemento
+
+Carnage Empire = Imperio Carnicero
+
+New Sumeria = Nueva Sumeria
+
+New Legion = Nueva Legion
+
+New Incan Empire = Nuevo Imperio Incaico
+
+Nosti Utopia = Utopia de Nosti
+
+New Romania = Nueva Rumania
+
+The Prism = El Prisma
+
+Lost Islands = Islas Perdidas
+
+Qamar Empire = Califato Qamarida
+
+The Resistance = La Resistencia
+
+Democracy of the South = Democracia del Sur
+
+Ragnarok Empire = Imperio del Ragnarok
+
+The Fjords = Los Fiordos
+
+New Rus = Nueva Rus
+
+New Huns = Nuevos Hunos
+
+Aberration Lords = Señores de la Aberracion
+
+Aberration Rebels = Rebeldes de la Aberracion
+
+Mercenaries = Mercenarios
+
+Reapers = Asechadores
+
+Matriarchy of the Great Sunlight = Matriarcado de la Gran Luz
+
+New Brittania = Nueva Brittania
 
 
 
