--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -1,5 +1,7 @@
 #################### Lines from Units ####################
 
+Pick a tech = Elige Engram
+
 Dilophosaurus = Dilofosaurio
 
 Raptor Rider = Jinete de Raptor
