--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -394,9 +394,9 @@ New Rus = Nueva Rus
 
 New Huns = Nuevos Hunos
 
-Aberration Lords = Señores de la Aberracion
+Lords = Señores
 
-Aberration Rebels = Rebeldes de la Aberracion
+Rebels = Rebeldes
 
 Mercenaries = Mercenarios
 
