--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -409,6 +409,95 @@ New Brittania = Nueva Brittania
 
 
 
+Carnivore I = Carnivoro I
+
+Carnivore II = Carnivoro II
+
+Carnivore III = Carnivoro III
+
+Eyes by the side I = Ojos a los Costados I
+
+Eyes by the side II = Ojos a los Costados II
+
+Warm Blood I = Sangre Caliente I
+
+Warm Blood II = Sangre Caliente I
+
+New Brittania = Nueva Brittania
+
+Fur I = Pelaje I
+
+Fur II = Pelaje II
+
+Womb = Gestacion
+
+Tooths I = Dientes I
+
+Tooths II = Dientes II
+
+Hydrodynamic Body = Cuerpo Hidrodinamico
+
+Sedentary Lifestyle = Vida Sedentaria
+
+Coral Predator = Depredador de las Costas
+
+Sea Predator = Depredador de los Oceanos
+
+Flippers = Aletas
+
+Lungs = Pulmones
+
+Gills = Branquias
+
+Tyrant I = Tirano I
+
+Tyrant II = Tirano II
+
+Beach = Playa
+
+Prey I = Presa I
+
+Prey II = Presa II
+
+Prey III = Presa III
+
+Prey = Presa
+
+Theropoda = Teropodo
+
+Mammal = Mamifero
+
+Amphibious = Anfibio
+
+Cetaceous = Cetaceo
+
+Marine Reptile = Reptil Marino
+
+Flying = Volador
+
+Fantasy = Criatura Fantastica
+
+Swamp Fever = Fiebre de los Pantanos
+
+Swamp Creature = Criatura de los Pantanos
+
+Amniote I = Amniota I 
+
+Amniote II = Amniota II
+
+Scales I = Escamas I
+
+Scales II = Escamas II
+
+Leather era = Edad del Cuero
+
+Smithy era = Edad de la Forja
+
+Electric era = Edad de la Electricidad
+
+Tek era = Edad del Tek
+
+
 
 
 
