Massive Graphical Update

--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -2,9 +2,17 @@
 
 Pick a tech = Elige Engram
 
-Dilophosaurus = Dilofosaurio
+Dilophosaurus = Dilofosaurio Salvaje
 
 Raptor Rider = Jinete de Raptor
+
+Argentavis Rider = Jinete de Argentavis
+
+Fjordhawk = Halcón de los Fiordos
+
+Snow Owl = Jinete de Buho de las Nieves
+
+Quetzalcoatlus = Jinete de Quetzal
 
 Raptor = Raptor Salvaje
 
@@ -18,13 +26,13 @@ Kapro Rider = Jinete de Kapro
 
 Ptera Rider = Jinete de Pteranodon
  
-Carno Rider = Jinete de Carno
+Carno Rider = Jinete de Carnotauro
 
-Sarco Rider = Jinete de Sarco
+Sarco Rider = Jinete de Sarcosuchus
 
-Stego Rider = Jinete de Stego
+Stego Rider = Jinete de Stegosaurio
 
-Theri Rider = Jinete de Theri
+Theri Rider = Jinete de Therizinosaurio
 
 Camuflage Survivor = Jinete Camuflado
 
@@ -38,7 +46,7 @@ Megalodon Rider = Jinete de Megalodon
 
 Basilo Rider = Jinete de Basilosaurio
 
-Plesio Rider = Jinete de Plesio
+Plesio Rider = Jinete de Plesiosaurio
 
 Dunkleosteous Rider = Jinete de Dunkleosteous
 
@@ -50,13 +58,47 @@ Rhino Rider = Jinete de Rinoceronte Lanudo
 
 Daeodon Rider = Jinete de Daeodon
 
-Rex Rider = Jinete de Rex
+Rex Rider = Jinete de Tiranosaurio
 
-Velonasaur Rider = Jinete de Velona
+Velonasaur Rider = Jinete de Velonasaurio
 
-Spino Rider = Jinete de Spino
+Spino Rider = Jinete de Espinosaurio
 
-Giga Rider = Jinete de Giga
+Rock Drake = Jinete de Dragón de Roca
+
+Rollrat = Jinete de Rotorrata
+
+Riojavenatryx = Jinete de Riojavenatryx
+
+Baryonix Rider = Jinete de Baryonix
+
+Griffin = Jinete de Grifo
+
+Shanshanosaurus = Jinete de Shanshanosaurio
+
+Yuty Rider = Jinete de Yutyrannus
+
+Carcharodontosaurus Rider = Jinete de Carcharodontosaurio
+
+Concavenator Rider = Jinete de Concavenator
+
+Megalosaurus = Jinete de Megalosaurio
+
+Aberrant Spino = Jinete de Espinosaurio Aberrante
+
+Herrera Rider = Jinete de Herrerasaurio
+
+Velonasaur = Jinete de Velonasaurio
+
+Cerato Rider = Jinete de Ceratosaurio
+
+Queen Bee = Jinete de Abeja Reina
+
+Deinonychus = Jinete de Deinonico
+
+Lyviatan Rider = Jinete de Lyviatan
+
+Giga Rider = Jinete de Giganotosaurio
 
 Managarmr Rider = Jinete de Managarmr
 
@@ -72,7 +114,7 @@ Shotgun Survivor = Escopetero
 
 Nameless = Sin Nombre
 
-Tek Rex Rider = Jinete de Rex Tek
+Tek Rex Rider = Jinete de Tiranosaurio Tex
 
 Reaper = Rey Asolador
 
@@ -114,7 +156,13 @@ Fungic Wood = Madera Fungica
 
 Basilisk = Basilisco
 
-Amargasaur = Amargasaurio
+Amargasaurus = Amargasaurio
+
+Mighty Titanosaurus = Titanosaurio
+
+Trike Rider = Jinete de Triceratops
+
+Bronto Rider = Jinete de Brontosaurio
 
 Magmasaur = Magmasaurio
 
@@ -497,14 +545,25 @@ Electric era = Edad de la Electricidad
 
 Tek era = Edad del Tek
 
+Swamp Terror = Terror de los Pantanos
 
+Swarm = Enjambre
 
+Cave Predator = Depredador de las Cavernas
 
+Toxic Plant = Planta Envenenada
 
+Rabies = Rabia
 
+Intimidation = Intimidacion
 
+#################### Lines from CityNames ####################
 
+United = Union
 
+Generations = Generacion
+
+Dogmatic = Dogmatica
 
 
 
