Spanish language update + buffed Argies + new basic difficulty
This update adds kinda balance and now HLNA are only factuable on maps that have tek, like the genesis 2 one

--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -2,6 +2,8 @@
 
 Pick a tech = Elige Engram
 
+Ancient ruins = Arca
+
 Dilophosaurus = Dilofosaurio Salvaje
 
 Raptor Rider = Jinete de Raptor
@@ -133,6 +135,62 @@ Ascended Gunner = Armero Ascendido
 #################### Lines from TileResources ####################
 
 Lemon = Limon
+
+Ovis = Oveja
+
+Carnotaurus = Carnotauro
+
+Stego = Estegosaurio
+
+Dimorphodon = Dimorfodon
+
+Allosaurus = Alosaurio
+
+Swamp Zone = Zona de Pantanos
+
+Volcanic Rock = Roca Volcánica
+
+Volcanic Soil = Sedimento Volcánico
+
+Volcano = Volcán
+
+Volcanic Zone = Zona Volcánica
+
+Waterfall = Cascada
+
+White Beach = Playa Blanca
+
+Yellow Coat = Manto Amarillo
+
+Valguero Coast = Costa Soleada
+
+Valguero Hill = Colina Soleada
+
+Valguero Mountain = Montaña de Valguero
+
+Valguero Rock = Roca de Valguero
+
+Val Land = Tierra de Valguero
+
+Viking Ruin = Ruina Vikinga
+
+Void = Vacio
+
+Paraceratherium = Paraceraterio
+
+Tar Pit = Alquitrán
+
+Space = Espacio
+
+Surface = Superficie
+
+Snowy Beach = Playa Nevada
+
+Redwoods = Secuoyas
+
+Pines = Pinos
+
+Redwoods Plains = Planicie de las Secuoyas
 
 Coelacanth = Celacanto
 
@@ -412,11 +470,61 @@ Aberrant Invasion = Invasion Aberrante
 
 Edmundium Empire = Imperio del Elemento
 
+Lost Island = Isla Perdida
+
+Pure Genesis = Pureza del Genesis
+
+Rockwell Gardens = Jardines de Rockwell
+
+Scorched Earth = Tierra Quemada
+
+The Center = La Nueva Legión
+
+The Island = La Isla
+
+The Redwoods = Los Habitantes del Bosque
+
+The Sky Domains = Los Dominios de los Cielos
+
+Camp Omega = Campo Omega
+
+Crystal Path = Camino de Cristal
+
+Drayo´s Cave = Cueva de Drayo
+
+Frigid Plains = Planicies Frigidas
+
+Frozen Fang = Diente Helado
+
+Memorial Plaza = Plaza Memorial
+
+Overseer Cultists = Cultistas del Supervisor
+
+Sactuary = Santuario
+
+Sea Dogs = Perros de Mar
+
+Secluded Lake = Lago Secludido
+
+South Haven = Cielo Sur
+
+The Core = El Interior
+
+The Dead Island = La Isla Muerta
+
+The Deep Island = La Isla Profunda
+
+The Overpass = El Sobrepase
+
+The Red Peak = La Cima Roja
+
+Writhing Swamps = Pantanos Perturbantes
+
 Carnage Empire = Imperio Carnicero
 
 New Sumeria = Nueva Sumeria
 
-New Legion = Nueva Legion
+New Legion = Nueva Roma
 
 New Incan Empire = Nuevo Imperio Incaico
 
