New Great Persons update!
enjoy 67 changes

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -3,3 +3,13 @@
 Pick a tech = Pick a Engram
 
 Ancient ruins = Supply Crate
+
+Great Merchant = Great Traveller
+
+Great Prophet = Great Shaman
+
+Great Engineer = Great Steampunker
+
+Great Artist = Great Hunter
+
+Great Scientist = Great Thinker
