--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -24,7 +24,7 @@ Survivor = Superviviente
 
 Crossbow Survivor = Superviviente con Ballesta
 
-Kapro Rider = Jinete de Kapro
+Kapro Rider = Jinete de Kaprosuchus
 
 Ptera Rider = Jinete de Pteranodon
  
