--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -2,6 +2,16 @@
 
 Pick a tech = Elige Engram
 
+Great Merchant = Gran Aventurera
+
+Great Prophet = Gran Chamán
+
+Great Engineer = Gran Speampunker
+
+Great Artist = Gran Cazador
+
+Great Scientist = Gran Pensador
+
 Ancient ruins = Arca
 
 Dilophosaurus = Dilofosaurio Salvaje
@@ -69,6 +79,20 @@ Spino Rider = Jinete de Espinosaurio
 Rock Drake = Jinete de Dragón de Roca
 
 Rollrat = Jinete de Rotorrata
+
+Novice Sergean = Sargento Novato
+
+Senior Sergeant = Comandante
+
+High Commander = Comandante Mayor
+
+Great Naturalist = Gran Naturalista
+
+Chalicotherium Rider = Jinete de Calicoterio
+
+Direbear Rider = Jinete de Oso de Cara Corta
+
+Gigantopithecus Rider = Jinete de Gigantopiteco
 
 Riojavenatryx = Jinete de Riojavenatryx
 
