Amphibian and City State Update!
Reworked Most Stuff
Added:
Beelzebufo Rider
Ichthyostega Rider
Tiktaalik
Gryposuchus

Also a lot of new Absolute units improvements
And New City states: Leisure (provides a unique luxury item) and Strategical (provides strategic resources)

--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -238,13 +238,137 @@ Fungic Wood = Madera Fungica
 
 Basilisk = Basilisco
 
-Amargasaurus = Amargasaurio
+Amargasaurus = Jinete de Amargasaurio
 
-Mighty Titanosaurus = Titanosaurio
+Mighty Titanosaurus = Jinete de Titanosaurio
 
 Trike Rider = Jinete de Triceratops
 
 Bronto Rider = Jinete de Brontosaurio
+
+Bajadasaurus Rider = Jinete de Bajadasaurio
+
+Barbaridactylus = Jinete de Barbaridactilo
+
+Castoroides = Jinete de Castoroides
+
+Cave Lion = Jinete de Leon de las Cavernas
+
+Cave Tropper = Tropa de las Cavernas
+
+Cryodrakon Rider = Jinete de Cryordrakon
+
+Deinosuchus Rider = Jinete de Deinosuchus
+
+Deinotherium = Jinete de Deinotherium
+
+Danger Survivor = Superviviente Aberrante
+
+Desmodus = Jinete de Castoroides
+
+Dinopithecus Rider = Jinete de Castoroides
+
+Diplodocus = Jinete de Diplodoco
+
+Diprotodon = Jinete de Diprotodon
+
+DireWolf Rider = Jinete de Lobo Gigante
+
+Doedicurus Rider = Jinete de Doedicurus
+
+Electric Dragon = Jinete de Dragón Eléctrico
+
+Fasolasuchus Rider = Jinete de Fasolasuchus
+
+Gasbags Rider = Jinete de Gasbags
+
+Gigantophis = Jinete de Gigantophis
+
+Grenadier Survivor = Granadero
+
+Glider Survivor = Superviviente con Traje de Planeo
+
+Halberd Soldier = Halabardero
+
+Hazard Survivor = Superviviente Antiradiacion
+
+Heavy Cannon = Cañon Pesado
+
+Helicoprion Rider = Jinete de Helicoprion
+
+Ichtyosaurus Rider = Jinete de Ictiosaurio
+
+Inostrancevia Rider = Jinete de Inostrancevia
+
+Karkinos = Jinete de Karkinos
+
+Kentrosaurus = Jinete de Kentrosaurio
+
+Koolasuchus = Jinete de Koolasuchus
+
+Light Cannon = Cañon Ligero
+
+Maewing = Jinete de Maewin
+
+Mantis = Jinete de Mantis
+
+Mastodonsaurus = Jinete de Mastodonsaurus
+
+Megaloceros Rider = Jinete de Megaloceros
+
+Megatherium = Jinete de Megaterio
+
+Microraptor = Microraptor
+
+Moschops = Jinete de Moschops
+
+Muttaburrasaurus = Jinete de Mutaburrasaurio
+
+Pachycephalosaurus Rider = Jinete de Paquicefalosaurio
+
+Paracer Rider = Jinete de Paraceraterio
+
+Parasaur Rider = Jinete de Parasaurolophus
+
+Pinacosaurus Rider = Jinete de Pinacosaurio
+
+Pistol Handler = Pistolero
+
+Portugalophis = Jinete de Portugalophis
+
+Prolibytherium = Jinete de Prolibyterio
+
+Pulminoscorpius = Jinete de Pulminoscorpio
+
+Purrusaurus = Jinete de Purrusaurio
+
+Ravager Rider = Jinete de Ravager
+
+Red Cross = Cruz Roja
+
+Rhyniognatha = Jinete de Rhinyognatha
+
+Scorched Wyvern = Jinete de Wiverno Quemado
+
+Shield Survivor = Escudero
+
+Sinomacrops Survivor = Superviviente con Sinomacrops
+
+Titanoboa = Jinete de Titanoboa
+
+Troodon = Trodón
+
+Tropical Wyvern = Jinete de Wiverno Tropical
+
+Tyrannotitan Rider = Jinete de Tiranotitan
+
+Webshooter Survivor = Superviviente con Araña
+
+Wyvern = Jinete de Wiverno
+
+Xiphactinus Rider = Jinete de Xiphactinus
+
+Yi Ling = Jinete de Yi Ling
 
 Magmasaur = Magmasaurio
 
