QOL Update and some other fixes
added maps

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -13,3 +13,12 @@ Great Engineer = Great Steampunker
 Great Artist = Great Hunter
 
 Great Scientist = Great Thinker
+
+Stone Irrigation Sistem = Stone Irrigation System
+
+Carno Rider Sistem = Carnotaurus Rider
+
+Theri Rider Sistem = Therizinosaurus Rider
+
+Alpha Carno Sistem = Alpha Carnotaurus
+
