--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -16,9 +16,19 @@ Great Scientist = Great Thinker
 
 Stone Irrigation Sistem = Stone Irrigation System
 
-Carno Rider Sistem = Carnotaurus Rider
+Carno Rider = Carnotaurus Rider
 
-Theri Rider Sistem = Therizinosaurus Rider
+Theri Rider = Therizinosaurus Rider
 
-Alpha Carno Sistem = Alpha Carnotaurus
+Alpha Carno = Alpha Carnotaurus
+
+Giga Rider = Giganotosaurus Rider
+
+Sarco Rider = Sarcosuchus Rider
+
+Gold = Currency
+
+Culture = Heritage
+
+Production = Manpower
 
