Translation Update and some fixes and new stuff

--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -28,7 +28,7 @@ Quetzalcoatlus = Jinete de Quetzal
 
 Raptor = Raptor Salvaje
 
-Corrupted Survivor = Superiviviente Corrupto
+Corrupted Survivor = Superviviente Corrupto
 
 Survivor = Superviviente
 
@@ -142,7 +142,7 @@ Nameless = Sin Nombre
 
 Tek Rex Rider = Jinete de Tiranosaurio Tex
 
-Reaper = Rey Asolador
+Reaper = Asolador
 
 New Artillery = Nueva Artilleria
 
@@ -264,9 +264,9 @@ Deinotherium = Jinete de Deinotherium
 
 Danger Survivor = Superviviente Aberrante
 
-Desmodus = Jinete de Castoroides
+Desmodus = Jinete de Desmodus
 
-Dinopithecus Rider = Jinete de Castoroides
+Dinopithecus Rider = Jinete de Dinopithecus
 
 Diplodocus = Jinete de Diplodoco
 
@@ -337,8 +337,6 @@ Pistol Handler = Pistolero
 Portugalophis = Jinete de Portugalophis
 
 Prolibytherium = Jinete de Prolibyterio
-
-Pulminoscorpius = Jinete de Pulminoscorpio
 
 Purrusaurus = Jinete de Purrusaurio
 
@@ -417,6 +415,631 @@ Green Gem = Gema Verde
 Keratin = Queratina
 
 Sap = Savia
+
+Bone Car = Carro de Huesos
+
+Enforcer = Ejecutor
+
+Impregnated Survivor = Superviviente Embarazado
+
+Glider Survivor = Superviviente Planeador
+
+Hazard Survivor = Superviviente Protegido
+
+Tek HomoDeus = HomoDeus 
+
+Tek Land Infantry = Infanteria Tek
+
+Tek Mounted Infantry = Infanteria Montada Tek
+
+Tek Assault Infantry = Infanteria de Asalto Tek
+
+Tek Siege Infantry = Infanteria de Asedio Tek
+
+Tek Juggernaut = Juggernaut Tek
+
+Tek Heavy Mounted Infantry = Infanteria Pesada Montada Tek
+
+Ranger = Tirador
+
+Geosaurus = Jinete de Geosaurio
+
+Ceratosuchops = Jinete de Ceratosuchops
+
+Arsinoitherium = Jinete de Arsinoitherium
+
+Tek Allosaurus = Alosaurio Tek
+
+Tek Rhino = Rinoceronte Lanudo Tek
+
+Tek Purlovia = Purlovia Tek
+
+Tyrant = Tirano
+
+Orcinus = Orcino
+
+Dearc = Jinete de Dearc
+
+Torosaurus Rider = Jinete de Torosaurio
+
+Rugops Rider = Jinete de Rugops
+
+Ekrixinatosaurus Rider = Jinete de Ekrixinatosaurio
+
+Majungasaurus Rider = Jinete de Majungasaurio
+
+Giant Death Worm = Gusano Gigante de la Muerte
+
+Vulture = Buitre
+
+Diver = Buzo
+
+Gas Collector = Recolector de Gás
+
+Steampunk Station = Estación Steampunk
+
+Great Reserve = Shakkei
+
+Potion Station = Kulturhus
+
+Great Camp = Bagh
+
+Mountain Temple = Alcázar
+
+Castle = Bastión
+
+Citadel = Ciudadela
+
+Ranch = Hogar
+
+Desert Ranch = Samarra
+
+Orchard = Dumat del Desierto
+
+Garrison = Lacustre
+
+Kraal =  Hogar Escalonado
+
+Ragnarok Temple = Iglesia de Ragnarok
+
+Tumash Temple = Palafito de Tumash
+
+Foundry = Fundición
+
+Sap Collector = Recolector de Savia
+
+Lake House = Tono
+
+Carpentry Area = Maderera
+
+Advanced Forge I = Forja Avanzada I
+
+Advanced Forge II = Forja Avanzada II
+
+Advanced Forge III = Forja Avanzada III
+
+Tharat Monument = Monumento de Tharat
+
+Tharat Granary = Granero de Tharat
+
+Tharat Barracks = Barracas de Tharat
+
+Tharat Temple = Templo de Tharat
+
+Clay = Arcilla
+
+Hunter Temple = Templo del Cazador
+
+Clever Temple = Templo del Listo
+
+Skylord Temple = Templo del Señor de los Cielos
+
+Strong Temple = Templo del Fuerte
+
+Deep Temple = Templo de las Profundidades
+
+Shadows Temple = Templo de las Sombras
+
+Pack Temple = Templo de la Manada
+
+Void Temple = Templo del Vacio
+
+Chaos Temple = Templo del Caos
+
+Prehistoric Greenhouse = Invernadero Prehistorico
+
+The Arcane Union = La Union Arcana
+
+The Tek Federation = La Federacion Tek
+
+The Cloaked Alliance = La Alianza Cubierta
+
+Agiary = Agiario
+
+Stelae = Estela de la Montaña
+
+Montano = Estepa
+
+Fruit = Fruta
+
+Cementing Paste = Cemento
+
+Crops Domestication = Domesticacion del grano
+
+Berry Stew = Estofado de Bayas
+
+Salads = Ensaladas
+
+Roasted Vegetables = Vegetales Ahumados
+
+Flour = Levadura
+
+Tomato Domestication = Domesticacion del tomate
+
+Dough = Masa
+
+Pizza Production = Produccion de Pizza
+
+Sunflower Oil = Aceite de Girasol
+
+Olive Oil = Aceite de Oliva
+
+Fried Dodo Production = KFC hecho de dodos
+
+Tribal Stones = Piedras Tribales
+
+Celtic Language = Idioma Celtico
+
+Spiritual Travel = Viaje Espiritual
+
+Rice Domestication = Domesticacion del Arroz
+
+Corn Domestication = Domesticacion del Maíz
+
+Copper Mine = Mina de Cobre
+
+Coastal Village = Aldea Costera
+
+Crystal Cave = Cuevas de Cristal
+
+Dino Nest = Nido de Dinosaurios
+
+Desert Landmark = Marca del Oeste
+
+Flint Mine = Minas de Silex
+
+Flint Spears = Lanzas de Silex
+
+Flint Tools = Herramientas de Silex
+
+Flint = Silex
+
+Lost Colony = Colonia Perdida
+
+Lost Enforcer = Control Perdido
+
+Vampire = Vampiro
+
+Floating Island = Isla Flotante
+
+Forest Cabins = Casas del Bosque
+
+Fountain Economy = Fuente
+
+Fresh Water Industry = Industria de Agua Fresca
+
+God Awakes Monument = Monumento Tardio
+
+GPS Supply = Suplementos de GPS
+
+Hatchery = Criadero
+
+House of Mercenaries = Casa de los Mercenarios
+
+Hunter Camp = Campamento del Cazador
+
+Ice Age = Era del Hielo
+
+Insect House = Casa de Insectos
+
+Campfires = Hogueras
+
+Cub Survivor = Superviviente con Maza
+
+Compound Bow Survivor = Superviviente con Arco Compuesto
+
+Composite Bow Survivor = Superviviente con Arco Avanzado
+
+Dorudon Rider = Jinete de Dorudon
+
+Dzungariotherium Rider = Jinete de Dzungariotherium
+
+Dsungaripterus Rider = Jinete de Dsungaripterus
+
+Elf Magic Engineer = Ingeniera Mágica Elfica
+
+Fenrir Rider = Jinete de Fenrir
+
+Gacha = Jinete de Gacha
+
+Glyptodon = Jinete de Gliptodonte
+
+Gallimimus Rider = Jinete de Gallimimus
+
+Great Chief = Gran Jefe
+
+Great Scholar = Gran Erudita
+
+Gryposuchus Rider = Jinete de Gryposuchus
+
+Homarus Rider = Jinete de Langosta Gigante
+
+Impaler = Empalador
+
+Ichthyostega Rider = Jinete de Ichthyostega
+
+Hyneria Rider = Jinete de Hyneria
+
+Longbow Survivor = Superviviente con Arco Largo
+
+Megaraptor Rider = Jinete de Megaraptor
+
+Minor Chief = Jefe Menor
+
+Miracinonyx Rider = Jinete de Miracinonyx
+
+Corruption of the Arks = Corrupción de las Arcas
+
+Global Diversity = Diversidad Global
+
+Studies for the Dark Lord = Estudios para el Señor Oscuro
+
+Empire of Sea = Imperio del Mar
+
+Genesis Simulation = Simulacion de Genesis
+
+The pawn sacrifices itself to defend the king = El peón se sacrifica para defender al rey
+
+The Center of the Isle = El Centro de la Isla
+
+The Chosen Survivor to Ascend = La Superviviente elegida para Ascender
+  
+Mountain Range = Cordilleras
+
+Stare = Mirada Penetrante
+
+Bone-Shaker = Destroza Huesos
+
+Savage Momentum = Momentum Salvaje
+
+Health I = Salud I
+
+Health II = Salud II
+
+Health III = Salud III
+
+Stamina I = Energia I
+
+Stamina II = Energia II
+
+Stamina III = Energia III
+
+Damage I = Daño I
+
+Damage II = Daño II
+
+Damage III = Daño III
+
+Experience I = Experiencia I
+
+Experience II = Experiencia II
+
+Experience III = Experiencia III
+
+Courage I = Coraje I
+ 
+Courage II = Coraje II
+
+Oxygen I = Oxigeno I
+
+Oxygen II = Oxigeno II
+
+Oxygen III = Oxigeno III
+
+Fortitude I = Fortitud I
+
+Fortitude II = Fortitud II
+
+Fortitude III = Fortitud III
+
+Sails = Velas
+
+Fishing = Piscivoro
+
+Crocodile Face = Rostro de Cocodrilo
+
+Veil I = Velo I
+
+Veil II = Velo II
+
+Veil III = Velo III
+
+Protocol I = Protocolo I
+
+Protocol II = Protocolo II
+
+Protocol III = Protocolo III
+
+Datajack = Hackeo de Datos
+
+Echo Pulse I = Eco-Pulso I
+
+Echo Pulse II = Eco-Pulso II
+
+Ammunition I = Munición I
+
+Ammunition II = Munición II
+
+Alpha Creature = Criatura Alfa
+
+Abelisauridae = Abelisaurio
+
+Armored Vehicle = Vehiculo Acorazado
+
+Boss = Jefe
+
+Final Boss = Jefe Final
+
+Insect = Insecto
+
+Land Avian = Ave Terrestre
+
+Land Hybrid = Hybrido Terrestre
+
+Pinnipeds = Pinnípedo
+
+Rat = Rata
+
+Therapsida = Terápsido
+
+Flying = Criatura Voladora
+
+Radiated = Irradiado
+
+Saltwater Crocodile = Cocodrilo de Agua Salada
+
+Common Flu = Resfrio Común
+
+Cancer = Cáncer
+
+Bone Fracture = Fractura de Huesos
+
+Sedentarism = Sedentarismo
+
+Pneumonia = Neumonía
+
+Thermal Stress = Estres Termico
+
+Asthma = Asma
+
+Greyhound Body = Cuerpo De Galgo
+
+Marine Adaptation = Adaptacion Marina
+
+Ambush Predator = Depredador de Emboscada
+
+Blood Mistress = Señora de sangre
+
+Segnosaurus Rider = Jinete de Segnosaurio
+
+Ankylosaurus Rider = Jinete de Ankylosaurio
+
+Shotel Survivor = Superviviente con Shotel
+
+Slave = Esclavo
+
+Snow Survivor = Superviviente de la Nieve
+
+Spear Survivor = Superviviente con Lanza
+
+Special Forces = Fuerzas Especiales
+
+Stegodon Rider = Jinete de Stegodon
+
+Stegotetrabelodon Rider = Jinete de Stegotetrabelodon
+
+Thylacoleo Rider = Jinete de Thylacoleo
+ 
+Titanotylopus Rider = Jinete de Titanotylopus
+
+Vallecillosaurus Rider = Jinete de Vallecillosaurio
+
+Urumi Survivor = Superviviente con Ururmi
+
+Walrus Rider = Jinete de Morsa
+
+Zygophyseter Rider = Jinete de Zygophyseter
+
+Archelon Rider = Jinete de Archelon
+
+Arizonasaurus = Jinete de Arizonasaurio
+
+Bamboo Warrior = Superviviente con Lanza de Bambú
+
+Barbarian = Barbaro
+
+Baryonyx Rider = Jinete de Baryonyx
+ 
+Bison Latifrons = Jinete de Bison
+
+Bolas Survivor = Superviviente con Bolas
+
+Torch = Antorcha
+
+Stone Pick = Pico de Piedra
+
+Notes = Notas
+
+Campfire = Fogata
+
+Spear = Lanza de Madera
+
+Stone Hatchet = Hacha de Piedra
+
+Waterskin = Odre
+
+Sleeping Bag = Saco de Dormir
+
+Thatch Houses = Casa de Paja
+
+Spyglass = Catalejo
+ 
+Mortar = Mortero
+
+Wooden Houses = Casa de Madera
+
+Narcotics = Narcoticos
+ 
+Slingshot = Tirachinas
+
+Fish Basquet = Canasta de Pesca
+
+Bow and Arrow = Arco
+
+Recipes = Recetas
+
+Raft = Balsa
+
+Stone Houses = Casa de Piedra
+
+Professional Domestication = Lazo
+
+Fishing Rod = Caña de Pescar
+
+Preserving Bin = Contenedor
+
+Spike Wall = Muro de Pinchos
+
+Stone Irrigation Pipe = Irrigación
+
+Smithy = Herrería
+
+Refining Forge = Forja de Refineria
+
+Dock = Muelle
+
+Tranq Arrow = Flechas Narcoticas
+
+Metal Pick = Pico de Metal
+
+Metal Hatchet = Hacha de Metal
+
+Crossbow = Ballesta
+
+Reservoir = Reserva
+
+Pike = Lanza de Metal
+
+Balista = Ballesta Romana
+
+Greenhouse = Invernadero
+
+Metal Tap = Cañerias
+
+Metal House = Casa de Metal
+
+Fabricator = Fabrica Portatil
+
+Grenade = Granada
+
+Polymer = Polimero
+
+Pliers = Alicates
+
+Industrial Grill = Parrilla Industrial
+
+Cryopod = Criocamara
+
+Chainsaw = Motosierra
+
+Canteen = Cantimplora
+
+Flak Armor = Armadura de Metal
+
+Chain Bola = Trampas de Metal
+
+Assault Riffle = Rifle de Asalto
+
+Auto Torret = Torreta Automatica
+
+Flamethrower = Lanzallamas
+
+Island Bosses = Jefes de la Isla
+
+Tek Armor = Armadura Tek
+
+Tek Sword = Espada Tek
+
+Tek Turret = Torreta Tek
+
+Scorched Earth Boss = Jerfe de Scorched Earth
+
+Desert Creatures = Criaturas del Desierto
+
+Oil Pump = Bomba de Petroleo
+
+Wind Turbine = Turbina de Viento
+
+Aberration Boss = Jefe de Aberration
+
+Aberration Creatures = Criaturas de Aberration
+
+Hazard Suit = Traje de Peligro
+
+Glider Suit = Traje de Planeo
+
+Save the Earth = Salva a la Tierra
+
+Potion Stations = Estacion de Pociones
+ 
+Primitive Armory = Equipamiento Primitivo
+
+Leader Statue = Estatua del Lider
+
+Mining Camp = Campo de Mineria
+
+Ceramics Market = Mercado de Ceramicas
+
+Karkinos Trap = Trampa para Karkinos
+ 
+Ravager Trap = Trampa para Ravagers
+
+Reaper Queen Hall = Salón de la Reina Segadora
+
+Water Channels = Canales de Agua
+
+Local Government = Gobierno Local
+
+Rockwell Pantheon = Panteón de Rockwell
+
+Recurve Bow Survivor = Superviviente Estepario
+
+Distillery = Destilería
+
+Situations Vacant = Vacantes Laborales
+
+Great Medicine Hut = Gran Choza de Medicina
+
+Great Market = Gran Mercado
+
+Great Amphitheater = Gran Anfiteatro
+
+Great Station = Gran Estacion Quimica
+
+Great Igloo = Gran Iglú
+
+Great Burial Tomb = Gran Tumba Egipcia
+
 
 #################### Lines from TileImprovements ####################
 
@@ -602,6 +1225,300 @@ Defending Honor Studies = Estudios de la Defensa del Honor
 
 Assault Teaching = Enseñanza sobre Asalto
 
+Deadly Lands = Tierras Peligrosas
+
+Rare Studies = Estudios Raros
+
+Outback Desert = Criaturas del Desierto
+
+Fishing Parade = Zona de Pesca
+
+Extinction DLC = DLC de Extinction
+
+Genesis DLC = DLC de Genesis
+
+Genesis Two DLC = DLC de Genesis II
+
+Aberration DLC = DLC de Aberration
+
+Redwood Predator = Depredadores de los Secuoyas
+
+Redwoods = Secuoyas
+
+Evolution Museum = Museo de la Evolucion
+
+Marine Mania = Locura Marina
+
+Sushi Monopoly = Monopolio de Sushi
+
+Moai Statue = Estatua Moai
+
+Cattle Corral = Corral de Ganado
+
+Phiomia Meat = Carne de Phiomia
+
+Ovis Milk = Leche de Ovis
+
+Meat Monopoly = Monopolio de la Carne
+
+Milk Monopoly = Monopolio de la Leche
+
+Eggs Corral = Corral de Huevos
+
+Old Summer Palace = Antiguo Palacio de Verano
+
+Ocepechelon Rider = Jinete de Ocepechelon
+
+Onchopristis Rider = Jinete de Onchopristis
+
+Petronas Tower = Torre Petronas
+
+Tower Bridge = Puente de la Torre
+
+Prehistoric Ferns = Helechos Prehistoricos
+
+Prehistoric Flower Plants = Flores Prehistoricas
+
+Prehistoric Trees = Arboles Prehistoricos
+
+Prehistoric Insectivore Plants = Plantas Insectivoras Prehistoricas
+
+Permarachne Spiderlings = Permarachne Bebé
+
+Permarachne Egg = Huevo de Permarachne
+
+Fabricator Workshop = Pequeño Factorio
+
+Nabawi Mosque = Mezquita Nabawi
+
+Rat Engineer = Rata Ingeniera
+
+Rat Queen = Reina de las Ratas
+
+Platybelodon Rider = Jinete de Platybelodon
+
+Construction Labor = Lugar de Trabajo
+
+Oil Refinery = Refineria Avanzada de Petroleo
+
+Rat Brute = Rata Gigante
+
+Sidney Opera House = Teatro de la Ópera de Sídney
+
+New River Gorge Bridge = Puente del desfiladero del río Nuevo
+
+Biltmore Estate = Finca Biltmore
+
+Quagga Rider = Jinete de Quagga
+
+Anomalocaris Rider = Jinete de Anomalocaris
+
+Tek Red Cross = Cruz Roja Tek
+
+Tek Replicator = Replicador Tek
+
+Tek Riffles = Rifles Tek
+
+Tek Generator = Generador Tek
+
+Tek Fort = Fuerte Tek
+
+Mega Theatre = Mega Teatro
+
+Ryungyong Hotel = Hotel Ryungyong
+
+Tek City = Ciudad Tek
+
+Genesis Ship = Nave Genesis
+
+Trash = Basura
+
+Aberration Tools = Herramientas de Aberration
+
+Mainland = Tierra Natal
+
+Aberrant Fort =  Fuerte Aberrante
+
+Element Ore = Mineral de Elemento
+
+Lithium = Litio
+
+Ailurarctos Rider = Jinete de Ailurarctos
+
+Anglerfish = Pez Abisal
+
+Carp = Carpa
+
+Bones = Huesos
+
+Bloom = Piedra Luminosa
+
+Beer = Cerveza
+
+Argentavis Talon = Talón de Argentavis
+
+Abelisaurus = Abelisaurios
+
+Basiloceras Rider = Jinete de Basiloceras
+
+Beelzebufo Rider = Jinete de Beelzebufo
+
+Myliobetaidei Rider = Jinete de Manta
+
+Oasisaur = Jinete de Oasisaurio
+
+Ostafrikasaurus = Jinete de Ostafrikasaurio
+
+Monodon Rider = Jinete de Narval
+
+Phiomia Rider = Jinete de Phiomia
+
+Protostega Rider = Jinete de Protostega
+
+Sevant = Servidora
+
+Tropeognathus Rider = Jinete de Tropeognathus
+
+Tek Anti Tank = Arma Anti Tanque Tek
+
+Absorbent Substrate =  Substrato Absorbente
+
+Angler Gel = Gel de Pez Abisal
+
+Aquatic Mushroom = Hongo Aquatico
+
+Coconut = Coco
+
+Desert Pearl = Perla del Desierto
+
+Desert Slaves = Esclavos
+
+Desert Crystal = Cristal del Desierto
+
+Diorite = Diorita
+
+Amargasaur = Amargasaurio
+
+Deep Ocean = Oceano Profundo
+
+Direbear = Oso
+
+Fame = Fana
+
+Feathers = Plumas
+
+Gas Vein = Vena de Gas
+
+Giant Bee = Abejas
+
+Giant Leech = Sanguijuelas
+
+Giant Otter = Nutrias
+
+Giant Piranha = Pirañas
+
+Hippopotamus = Hipopotamos
+
+Hard Shell = Caparazon Duro
+
+Itchyosaurus = Ictiosaurio
+
+Insect Swarm = Enjambre de Insectos
+
+Leather = Cuero
+
+Oil Vein = Vena de Petroleo
+
+Pastries = Pasteles
+
+Rum = Ron
+
+Sauropod Vertebra = Vertebra de Sauropodo
+
+Sabertooth = Smilodon
+
+Sabertooth Salmon = Salmon
+
+Scales = Escamas
+
+Seahorses = Caballitos de Mar
+
+Seeker = Buscador
+
+Silica Pearls = Perlas
+
+Starfish = Estrella de Mar
+
+Sphyrna = Tiburon Martillo
+
+Sugar Cane = Caña de Azucar
+
+Thorny Dragon = Dragon Espinoso
+
+Titanium = Titanio
+
+Tomato = Tomate
+
+Vegetal Oil = Aceite Vegetal
+
+Volcanic Edestus = Edestus Volcanico
+
+Wool = Lana
+
+Wild Berries = Bayas Salvajes
+
+Wild Crops = Grano Salvaje
+
+Wild Dreadnoughtus = Dreadnoughtus Salvaje
+
+Wild Herbs = Hierbas Salvajes
+
+Yutyrannus = Yutirano
+
+Jungle Huts = Chozas de la Jungla
+
+Montano Temples = Templos de la Estepa
+
+Polymer Studies = Estudios del Polimero
+
+Ragnarok Monument = Monumento del Ragnarok
+
+Salt Deposits = Depositos de Sal
+
+Salt Mine = Mina de Sal
+
+Scorched Production Camp = Centro de Produccion
+
+Taming Show = Show de Tameo
+
+Train Station = Estacion de Tren
+
+Wasteland Pub = Bar
+
+Partial Health = Ataque Parcial
+
+Undead = No-Muerto
+
+Arcane = Arcano
+
+Aerial Supremacy = Supremacia Aerea
+
+Thermal Glide = Planeo
+
+Keen Vision = Vision Avanzada
+
+Call = Llamada
+
+Defense = Defensa
+
+Stampede = Estampida
+ 
+Reflexes = Reflejos
+
+Roar = Rugido
+
+Instinct = Instinto
+
 #################### Lines from Wonders from Ark s UNCIV Evolved ####################
 
 Blue Obelisk = Obelisco Azul
@@ -750,6 +1667,8 @@ Sea Predator = Depredador de los Oceanos
 Flippers = Aletas
 
 Lungs = Pulmones
+
+Pulminoscorpius = Pulminoscorpio
 
 Gills = Branquias
 
