Fixes and new random names Woow

--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -1740,6 +1740,156 @@ Generations = Generacion
 
 Dogmatic = Dogmatica
 
+Corrupted Faith = Fé Corrupta
+
+Orange Tree = Arbol de Naranjas
+
+Hunting Dogs = Perros de Caza
+
+Council = Consejo
+
+Jungle Tribes = Tribus de la Jungla
+
+Female Elf Doctor = Doctora Elfica
+
+Male Druid Doctor = Doctor Druida
+
+Dwarf Race Legacy = Legado de los Enanos
+
+The Schollar = Diosa Intelectual
+
+The General = Fé Militar
+
+Tropical Legacy = Legado Tropical
+
+Civilized Peoples = Legado Civilizado
+
+Religious Debt = Deuda Religiosa
+
+Forestal People = Legado del Bosque
+
+Desert People = Tribus del Desierto
+
+Personal Reflection = Reflejo Personal
+
+Swamp Faith = Fé del Pantano
+
+Modesty = Modestia
+
+Divinity = Divinidad
+
+Prayer = Rezo
+
+Worship = Adoracion
+
+Submission = Sumision
+
+Zealot = Zelote
+
+Marine Zealot = Zelote Marino
+
+Customs = Costumbres
+
+Family Values = Valores Familiares
+
+Creation = Creacion
+
+Saints = Santos
+
+Sufi Brotherhood = Hermandad Sufi
+
+Light of Tawhid = Luz de Tawhid
+
+Path of Barakah = Camino de Barakah
+
+Inner Jihad = Jihad Interna
+
+Voice of the Muezzin = Voz del Muezzin
+
+Circle of Ijtihad = Circulo de Ijtihad
+
+Zakat Redistribution = Redistribucion Zakat
+
+Waqf Institutions = Instituciones Waqf
+
+Minbar Authority = Autoridad Minbar
+
+Cycle of Samsara = Circulo de Samsara
+
+Karma’s Balance = Balance del Karma
+
+Ankh Piramid = Piramides
+
+Temple of Kanchipuram = Templo de Kanchipuram
+
+Ratha Procession = Procesion de Ratha
+
+Festival of Navaratri = Festival de Navaratri
+
+Đạo Mẫu Blessing = Bendicion de Đạo Mẫu
+
+Nats of the Forest = Nats del Bosque
+
+Phi Protection = Proteccion de Phi
+
+Olodumare’s Will = Voluntad de Olodumare
+
+Cornbread Communion = Comunion
+
+Shamanic Trance = Trance Shamanico
+
+Breath of the Deep = Suspiro de las Profundidades
+
+Saltwater Blessing = Bendicion del Mar
+
+Hunt God = Dios de la Caza
+
+Intelligence God = Dios de la Inteligencia
+
+Sky God = Dios de los Cielos
+
+War God = Dios de la Guerra
+
+Marine God = Dios del Mar
+
+Shadows God = Dios de la Muerte
+
+Pack God = Dios de la Manada
+
+Void God = Dios del Vacio
+
+Chaos God = Dios del Caos
+
+Arkhism = Arkismo
+
+Protestant Arkhism = Arkismo
+
+Confused Arkhism = Arkismo Confundido
+
+Weird Arkhism = Arkismo Raro
+
+West Arkhism = Arkismo del Este
+
+Swamp Arkhism = Arkismo del Pantano
+
+Terror Arkhism = Arkismo del Terror
+
+Marvel Arkhism = Arkismo Maravilloso
+
+Light Arkhism = Arkismo Iluminado
+
+Worker Arkhism = Arkismo de los Trabajadores
+
+Resistance Arkhism = Arkismo de la Resistencia
+
+Miracle Arkhism = Arkismo Milagroso
+
+Zoros Arkhism = Arkismo Zoros
+
+People Arkhism = Arkismo de la Gente
+
+Piracy Arkhism = Arkismo Pirata
+
 
 
 
